<resources>
    <string name="app_name">xmum_app</string>
    <string name="ss_txt">Study hard, study smart.</string>
    <string name="xmum_logo">xmum_logo</string>
    <string name="signin_prompt">Please sign in to continue</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="back_login">Back</string>
    <string name="sign_in_login">Sign in</string>
    <string name="sign_up_login">New user? Sign up now!</string>
    <string name="create_acc">Create a new account</string>
    <string name="have_acc">I already have an account</string>
    <string name="welcome">Welcome back</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail address</string>
    <string name="id">Student/Staff ID</string>
    <string name="register_user">Register user</string>
    <string name="arrowdown">arrowDown</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm">Confirm</string>
    <string name="pw_reset_instruction">Key in your e-mail address. An e-mail will be sent to your mailbox for confirmation.</string>
    <string name="pw_recovery">Password Recovery</string>
    <string name="login_registration">Already have an account? Login</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>

    <string name="academic_session">Academic session</string>
    <string name="rolenname">roleNname</string>
    <string name="e_xmum">E-XMUM</string>

    <string-array name="role_array">
        <item>Student</item>
        <item>Staff</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_staff">Hello Staff</string>
    <string name="hello_student">Hello Student</string>
    <string name="course_id">Course ID</string>
    <string name="course_name">Course Name</string>
    <string name="credit">Credit</string>
    <string name="create_course">Create Course</string>
    <string name="title_activity_staff_view_courses">StaffViewCourses</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="refresh_page">Reload</string>
    <string name="courses">Courses</string>
    <string name="enroll">Enroll</string>
    <string name="disenroll">Disenroll</string>
    <string name="student_id">Student ID</string>
    <string name="gpa">GPA</string>
    <string name="insert_grade">Insert grade</string>
    <string name="enrollment_history">Enrollment History</string>
</resources>